  * KDE frontend: Convert to allow_change_step/allow_go_forward system from
    GTK frontend so that the back and next buttons are more consistently
    enabled/disabled. Hide the back button on the first page.
  * Forbid going back or forward when the UI is already processing a
    previous back or forward action (closes: Malone #54163 and lots of
    duplicates).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  5 Oct 2006 10:33:02 +0100

ubiquity (1.1.28) edgy; urgency=low

  * KDE frontend: Ensure that the selected language is visible.
  * KDE frontend: Add a keyboard variant selector.
  * Incorporate user-setup reserved usernames fix (closes: Malone #47861).
  * Catch ENOENT, EIO, ENOTDIR, and EROFS while copying files, try to figure
    out what filename they relate to, and display a useful error message
    explaining that this is probably a CD or hard disk fault (as
    appropriate) and how to deal with this. Closes about a million bugs.
  * Display extended descriptions as well in debconf error dialogs.
  * Remove stub hppa support for now, since partman-palo is no longer in
    main.
  * Automatic update of included source packages: console-setup 1.7ubuntu16,
    debian-installer-utils 1.36ubuntu1, user-setup 1.2ubuntu4.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  5 Oct 2006 09:32:18 +0100

ubiquity (1.1.27) edgy; urgency=low

  * Fix syntax error in /usr/bin/ubiquity. Whoops!

 -- Colin Watson <cjwatson@ubuntu.com>  Tue,  3 Oct 2006 23:50:05 +0100

ubiquity (1.1.26) edgy; urgency=low

  [ Colin Watson ]
  * Build-depend on po-debconf (>= 1.0) for new translation-handling
    features.
  * Add a FAQ about backporting to doc/README.
  * Document ubiquity/install/filesystem-images in doc/README.
  * autogen.sh: Force use of automake-1.8 and aclocal-1.8.
  * Move auxiliary autotools files to a build subdirectory.
  * Add a check to debian/rules to remind me to bump the version number in
    configure.ac.